#34741 WIP on pseudo attributes semantic validation